--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ pytest>=6.2.5,<6.3.0
 httpx>=0.18.2,<0.19.0
 python-jose[cryptography]>=3.3.0,<3.4.0
 passlib[bcrypt]>=1.7.4,<1.8.0
-python-multipart>=0.0.5,<0.0.6 
+python-multipart>=0.0.5,<0.0.6
+gunicorn>=20.1.0
